--- a/belgeler/sekme-orgusu.html
+++ b/belgeler/sekme-orgusu.html
@@ -87,58 +87,38 @@ title: Sekme Örgüsü
 
 
 
+    <div data-sekme="yan sağda">
+      <input id="im1d" type="radio" name="sekme-sütun" checked="checked">
+      <input id="im2d" type="radio" name="sekme-sütun">
+      <input id="im3d" type="radio" name="sekme-sütun">
+      <input id="im4d" type="radio" name="sekme-sütun">
+      <div class="sekme-listesi" data-gnl="1 5p">
+        <label for="im1d">Birinci</label>
+        <label for="im2d">İkinci</label>
+        <label for="im3d">Üçüncü</label>
+        <label for="im4d">Dördüncü</label>
+      </div>
+      <div class="sekme-içeriği" data-gnl="4 5p">
+        <div>Birinci sağda sekme içeriği</div>
+        <div>İkinci sağda sekme içeriği</div>
+        <div>Üçüncü sağda sekme içeriği</div>
+        <div>Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
 
-<div data-sekme="sütun">
-  <input id="im1d" type="radio" name="sekme-sütun" checked="checked">
-  <label for="im1d" data-gnl="1 5p">Birinci</label>
-  <div data-gnl="4 5p">
-    Birinci sağda sekme içeriği
-  </div>
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
 
-  <input id="im2d" type="radio" name="sekme-sütun">
-  <label for="im2d" data-gnl="1 5p">İkinci</label>
-  <div data-gnl="4 5p">
-    İkinci sağda sekme içeriği
-  </div>
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
 
-  <input id="im3d" type="radio" name="sekme-sütun">
-  <label for="im3d" data-gnl="1 5p">Üçüncü</label>
-  <div data-gnl="4 5p">
-    Üçüncü sağda sekme içeriği
-  </div>
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
 
-  <input id="im4d" type="radio" name="sekme-sütun">
-  <label for="im4d" data-gnl="1 5p">Dördüncü</label>
-  <div data-gnl="4 5p">
-    Dördüncü sağda sekme içeriği
-  </div>
-</div>
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
 
-<div data-sekme="sütun sağda">
-  <input id="im1ds" type="radio" name="sekme-sütun-sağda" checked="checked">
-  <label for="im1ds" data-gnl="1 5p">Birinci</label>
-  <div data-gnl="4 5p">
-    Birinci sağda sekme içeriği
-  </div>
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
 
-  <input id="im2ds" type="radio" name="sekme-sütun-sağda">
-  <label for="im2ds" data-gnl="1 5p">İkinci</label>
-  <div data-gnl="4 5p">
-    İkinci sağda sekme içeriği
-  </div>
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
 
-  <input id="im3ds" type="radio" name="sekme-sütun-sağda">
-  <label for="im3ds" data-gnl="1 5p">Üçüncü</label>
-  <div data-gnl="4 5p">
-    Üçüncü sağda sekme içeriği
-  </div>
-
-  <input id="im4ds" type="radio" name="sekme-sütun-sağda">
-  <label for="im4ds" data-gnl="1 5p">Dördüncü</label>
-  <div data-gnl="4 5p">
-    Dördüncü sağda sekme içeriği
-  </div>
-</div>
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.</div>
+      </div>
+    </div>
 
 
 
