--- a/belgeler/sekme-orgusu.html
+++ b/belgeler/sekme-orgusu.html
@@ -86,8 +86,7 @@ title: Sekme Örgüsü
 </div>
 
 
-
-    <div data-sekme="yan sağda">
+    <div data-gnl="1 1p" data-sekme="yan sağda">
       <input id="im1d" type="radio" name="sekme-sütun" checked="checked">
       <input id="im2d" type="radio" name="sekme-sütun">
       <input id="im3d" type="radio" name="sekme-sütun">
