--- a/belgeler/sekme-orgusu.html
+++ b/belgeler/sekme-orgusu.html
@@ -2,6 +2,7 @@
 layout: default
 title: Sekme Örgüsü
 ---
+<!--
 <div class="beri-alt-2" data-gnl="2 2p">
   <div data-gnl="1 2p">
     <div class="kutu kutu-genel">          SOL ÜST SEKME        </div>
@@ -27,7 +28,7 @@ title: Sekme Örgüsü
   <div data-gnl="1 2p">
     <div class="kutu kutu-genel">          SAĞ YAN SEKME    </div>
   </div>
-</div>
+</div> -->
 
 
 
@@ -58,7 +59,7 @@ title: Sekme Örgüsü
     Dördüncü sekme içeriği
   </div>
 </div>
-
+<br><br><br>
 <div data-sekme="sağda" data-gnl="1 1p">
   <input id="im1s" type="radio" name="sekme-sağda" checked="checked">
   <label for="im1s">Birinci</label>
@@ -84,7 +85,7 @@ title: Sekme Örgüsü
     Dördüncü sağda sekme içeriği
   </div>
 </div>
-
+<br><br><br>
 
     <div data-gnl="1 1p" data-sekme="yan sağda">
       <input id="im1d" type="radio" name="sekme-sütun" checked="checked">
@@ -133,7 +134,7 @@ Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lor
 
 
 
-
+<!-- iptal edilen sekmeler
 
 <div class="sekmeler" data-gnl="24 24p" >
 
@@ -322,3 +323,4 @@ Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lor
     </div>
   </div>
 </div>
+-->
