sekme örgüsü güncelleme

--- a/belgeler/sekme-orgusu.html
+++ b/belgeler/sekme-orgusu.html
@@ -2,6 +2,100 @@
 layout: default
 title: Sekme Örgüsü
 ---
+<!--  yeni sekme örgüsü -->
+<div data-sekme data-gnl="1 1p">
+  <input id="im1" type="radio" name="sekme" checked="checked">
+  <label for="im1">Birinci</label>
+  <div>
+    Birinci sekme içeriği
+  </div>
+
+  <input id="im2" type="radio" name="sekme">
+  <label for="im2">İkinci</label>
+  <div>
+    İkinci sekme içeriği
+  </div>
+
+  <input id="im3" type="radio" name="sekme">
+  <label for="im3">Üçüncü</label>
+  <div>
+    Üçüncü sekme içeriği
+  </div>
+
+  <input id="im4" type="radio" name="sekme">
+  <label for="im4">Dördüncü</label>
+  <div>
+    Dördüncü sekme içeriği
+  </div>
+</div>
+
+<p></p>
+<p></p>
+
+<div data-sekme="sağda" data-gnl="1 1p">
+  <input id="im1s" type="radio" name="sekme-sağda" checked="checked">
+  <label for="im1s">Birinci</label>
+  <div>
+    Birinci sağda sekme içeriği
+  </div>
+
+  <input id="im2s" type="radio" name="sekme-sağda">
+  <label for="im2s">İkinci</label>
+  <div>
+    İkinci sağda sekme içeriği
+  </div>
+
+  <input id="im3s" type="radio" name="sekme-sağda">
+  <label for="im3s">Üçüncü</label>
+  <div>
+    Üçüncü sağda sekme içeriği
+  </div>
+
+  <input id="im4s" type="radio" name="sekme-sağda">
+  <label for="im4s">Dördüncü</label>
+  <div>
+    Dördüncü sağda sekme içeriği
+  </div>
+</div>
+
+<p></p>
+<p></p>
+
+<div data-sekme="yan sağda" data-gnl="1 1p">
+  <input id="im1d" type="radio" name="sekme-sütun" checked="checked">
+  <input id="im2d" type="radio" name="sekme-sütun">
+  <input id="im3d" type="radio" name="sekme-sütun">
+  <input id="im4d" type="radio" name="sekme-sütun">
+  <div class="sekme-listesi" data-gnl="1 5p">
+    <label for="im1d">Birinci</label>
+    <label for="im2d">İkinci</label>
+    <label for="im3d">Üçüncü</label>
+    <label for="im4d">Dördüncü</label>
+  </div>
+  <div class="sekme-içeriği" data-gnl="4 5p">
+    <div>Birinci sağda sekme içeriği</div>
+    <div>İkinci sağda sekme içeriği</div>
+    <div>Üçüncü sağda sekme içeriği</div>
+    <div>Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
+
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
+
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
+
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
+
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
+
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
+
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
+
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.</div>
+  </div>
+</div>
+
+<!-- yeni sekme örgüsü sonu -->
+
 <!--
 <div class="beri-alt-2" data-gnl="2 2p">
   <div data-gnl="1 2p">
@@ -29,107 +123,6 @@ title: Sekme Örgüsü
     <div class="kutu kutu-genel">          SAĞ YAN SEKME    </div>
   </div>
 </div> -->
-
-
-
-
-<!--  yeni sekme örgüsü -->
-<div data-sekme data-gnl="1 1p">
-  <input id="im1" type="radio" name="sekme" checked="checked">
-  <label for="im1">Birinci</label>
-  <div>
-    Birinci sekme içeriği
-  </div>
-
-  <input id="im2" type="radio" name="sekme">
-  <label for="im2">İkinci</label>
-  <div>
-    İkinci sekme içeriği
-  </div>
-
-  <input id="im3" type="radio" name="sekme">
-  <label for="im3">Üçüncü</label>
-  <div>
-    Üçüncü sekme içeriği
-  </div>
-
-  <input id="im4" type="radio" name="sekme">
-  <label for="im4">Dördüncü</label>
-  <div>
-    Dördüncü sekme içeriği
-  </div>
-</div>
-<br><br><br>
-<div data-sekme="sağda" data-gnl="1 1p">
-  <input id="im1s" type="radio" name="sekme-sağda" checked="checked">
-  <label for="im1s">Birinci</label>
-  <div>
-    Birinci sağda sekme içeriği
-  </div>
-
-  <input id="im2s" type="radio" name="sekme-sağda">
-  <label for="im2s">İkinci</label>
-  <div>
-    İkinci sağda sekme içeriği
-  </div>
-
-  <input id="im3s" type="radio" name="sekme-sağda">
-  <label for="im3s">Üçüncü</label>
-  <div>
-    Üçüncü sağda sekme içeriği
-  </div>
-
-  <input id="im4s" type="radio" name="sekme-sağda">
-  <label for="im4s">Dördüncü</label>
-  <div>
-    Dördüncü sağda sekme içeriği
-  </div>
-</div>
-<br><br><br>
-
-    <div data-gnl="1 1p" data-sekme="yan sağda">
-      <input id="im1d" type="radio" name="sekme-sütun" checked="checked">
-      <input id="im2d" type="radio" name="sekme-sütun">
-      <input id="im3d" type="radio" name="sekme-sütun">
-      <input id="im4d" type="radio" name="sekme-sütun">
-      <div class="sekme-listesi" data-gnl="1 5p">
-        <label for="im1d">Birinci</label>
-        <label for="im2d">İkinci</label>
-        <label for="im3d">Üçüncü</label>
-        <label for="im4d">Dördüncü</label>
-      </div>
-      <div class="sekme-içeriği" data-gnl="4 5p">
-        <div>Birinci sağda sekme içeriği</div>
-        <div>İkinci sağda sekme içeriği</div>
-        <div>Üçüncü sağda sekme içeriği</div>
-        <div>Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
-
-Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
-
-Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
-
-Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
-
-Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
-
-Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
-
-Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
-
-Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.</div>
-      </div>
-    </div>
-
-
-
-
-
-
-
-
-<!-- yeni sekme örgüsü sonu -->
-
-
 
 
 
