--- a/belgeler/kap-orgusu/siralama.html
+++ b/belgeler/kap-orgusu/siralama.html
@@ -26,20 +26,14 @@ title: Kap Örgüsü Sıralama
   </div>
 </div>
 <pre data-gnl="1 1p"><code class="language-html">
-&lt;div data-gnl=&quot;1 1p solda&quot;&gt;
- &lt;div data-gnl=&quot;1 3p&quot;&gt;
-  solda
- &lt;/div&gt;
+&lt;div data-gnl=&quot;1 1p 2nc&quot;&gt;
+  2nc: kaynak kodunda birinci sırada, görüntülemede ikinci sırada.
 &lt;/div&gt;
-&lt;div data-gnl=&quot;1 1p ortada&quot;&gt;
- &lt;div data-gnl=&quot;1 3p&quot;&gt;
-  ortada
- &lt;/div&gt;
+&lt;div data-gnl=&quot;1 1p 3nc&quot;&gt;
+    3nc: kaynak kodunda ikinci sırada, görüntülemede üçüncü sırada.
 &lt;/div&gt;
-&lt;div data-gnl=&quot;1 1p sa&#287;da&quot;&gt;
- &lt;div data-gnl=&quot;1 3p&quot;&gt;
-  sağda
- &lt;/div&gt;
+&lt;div data-gnl=&quot;1 1p 1nc&quot;&gt;
+    1nc: kaynak kodunda üçüncü sırada, görüntülemede birinci sırada.
 &lt;/div&gt;
 </code></pre>
 <p></p>
