--- a/belgeler/kap-orgusu/siralama.html
+++ b/belgeler/kap-orgusu/siralama.html
@@ -11,7 +11,7 @@ title: Kap Örgüsü Sıralama
 <p>Deveb kap örgüsünün sıralama özellikleri nesneleri kendi aralarında yazılış sırasından kopararay yeniden sıralandırmaya yarar ve nc birimiyle kullanılır.</p>
 
 <h3>Sıralama: <span data-metin="dikkat">1nc~24nc</span></h3>
-<p>Sıralama işlemi 1'den 24'e kadar gruplandırılabilir. Bir HTML etiketine 1nc ve 2nc tanımlaması yaptığınızda birbirleri arasında sıralama yapılır.</p>
+<p>Sıralama işlemi 1'den 24'e kadar gruplandırılabilir. Bir HTML etiketine 1nc ve 2nc tanımlaması yaptığınızda birbirleri arasında sıralama yapılır. Ekran örgüsüyle uyumludur. Mesela telefon ekranlarında bir nesneyi 2nc sırada gösterebilirken geniş ekranlarda başka bir sırada gösterebilirsiniz.</p>
 <p></p>
 
 <div data-gnl="1 1p" class="önizleme">
