--- a/belgeler/kap-orgusu/siralama.html
+++ b/belgeler/kap-orgusu/siralama.html
@@ -19,8 +19,8 @@ title: Kap Örgüsü Sıralama
   <div data-gnl="1 1p 2nc">
     2nc: kaynak kodunda birinci sırada, görüntülemede ikinci sırada.
   </div>
-  <div data-gnl="1 1p 3nc">
-    3nc: kaynak kodunda ikinci sırada, görüntülemede üçüncü sırada.
+  <div data-gnl="1 1p 1nc" data-kçk="3nc">
+    3nc: kaynak kodunda ikinci sırada, görüntülemede üçüncü sırada. Telefon ekranlarında ise birinci sırada.
   </div>
   <div data-gnl="1 1p 1nc">
     1nc: kaynak kodunda üçüncü sırada, görüntülemede birinci sırada.
@@ -30,8 +30,8 @@ title: Kap Örgüsü Sıralama
 &lt;div data-gnl=&quot;1 1p 2nc&quot;&gt;
   2nc: kaynak kodunda birinci sırada, görüntülemede ikinci sırada.
 &lt;/div&gt;
-&lt;div data-gnl=&quot;1 1p 3nc&quot;&gt;
-  3nc: kaynak kodunda ikinci sırada, görüntülemede üçüncü sırada.
+&lt;div data-gnl=&quot;1 1p 1nc&quot; data-kçk=&quot;1 1p 3nc&quot;&gt;
+  3nc: kaynak kodunda ikinci sırada, görüntülemede üçüncü sırada. Telefon ekranlarında ise birinci sırada.
 &lt;/div&gt;
 &lt;div data-gnl=&quot;1 1p 1nc&quot;&gt;
   1nc: kaynak kodunda üçüncü sırada, görüntülemede birinci sırada.
