--- a/belgeler/yazi-bicimi.html
+++ b/belgeler/yazi-bicimi.html
@@ -16,47 +16,28 @@ HTML başlık etiketleri &lt;h1&gt;'den &lt;h6&gt;'ya kadar varsayılan olarak t
   </thead>
   <tbody>
     <tr>
-      <td>
-        <pre data-gnl="1 1p"><code class="language-html">
-        &lt;h1&gt;&lt;/h1&gt;
-        </code></pre>
-      </td>
-      <td><span class="h1">h1. Bootstrap heading</span></td>
+      <td><pre data-gnl="1 1p"><code class="language-html">&lt;h1&gt;&lt;/h1&gt;</code></pre></td>
+      <td><h1>h1 Html Etiketi İle Yazılan Metin</h1></td>
     </tr>
     <tr>
-      <td>
-        <p><code class="highlighter-rouge">&lt;h2&gt;&lt;/h2&gt;</code></p>
-
-      </td>
-      <td><span class="h2">h2. Bootstrap heading</span></td>
+      <td><pre data-gnl="1 1p"><code class="language-html">&lt;h2&gt;&lt;/h2&gt;</code></pre></td>
+      <td><h2>h2 Html Etiketi İle Yazılan Metin</h2></td>
     </tr>
     <tr>
-      <td>
-        <p><code class="highlighter-rouge">&lt;h3&gt;&lt;/h3&gt;</code></p>
-
-      </td>
-      <td><span class="h3">h3. Bootstrap heading</span></td>
+      <td><pre data-gnl="1 1p"><code class="language-html">&lt;h3&gt;&lt;/h3&gt;</code></pre></td>
+      <td><h3>h3 Html Etiketi İle Yazılan Metin</h3></td>
     </tr>
     <tr>
-      <td>
-        <p><code class="highlighter-rouge">&lt;h4&gt;&lt;/h4&gt;</code></p>
-
-      </td>
-      <td><span class="h4">h4. Bootstrap heading</span></td>
+      <td><pre data-gnl="1 1p"><code class="language-html">&lt;h4&gt;&lt;/h4&gt;</code></pre></td>
+      <td><h4>h4 Html Etiketi İle Yazılan Metin</h4></td>
     </tr>
     <tr>
-      <td>
-        <p><code class="highlighter-rouge">&lt;h5&gt;&lt;/h5&gt;</code></p>
-
-      </td>
-      <td><span class="h5">h5. Bootstrap heading</span></td>
+      <td><pre data-gnl="1 1p"><code class="language-html">&lt;h5&gt;&lt;/h5&gt;</code></pre></td>
+      <td><h5>h5 Html Etiketi İle Yazılan Metin</h5></td>
     </tr>
     <tr>
-      <td>
-        <p><code class="highlighter-rouge">&lt;h6&gt;&lt;/h6&gt;</code></p>
-
-      </td>
-      <td><span class="h6">h6. Bootstrap heading</span></td>
+      <td><pre data-gnl="1 1p"><code class="language-html">&lt;h6&gt;&lt;/h6&gt;</code></pre></td>
+      <td><h6>h6 Html Etiketi İle Yazılan Metin</h6></td>
     </tr>
   </tbody>
 </table>
