--- a/belgeler/yazi-bicimi.html
+++ b/belgeler/yazi-bicimi.html
@@ -41,3 +41,19 @@ HTML başlık etiketleri &lt;h1&gt;'den &lt;h6&gt;'ya kadar varsayılan olarak t
     </tr>
   </tbody>
 </table>
+
+<div data-gnl="1 1p" class="önizleme">
+  <h3>Önizleme</h3>
+  <div data-gnl="2 2p">
+    <h1>h1 Html Etiketi İle Yazılan Metin</h1>
+  </div>
+</div>
+<pre data-gnl="1 1p"><code class="language-html">&lt;h2&gt;&lt;/h2&gt;</code></pre>
+<p></p>
+
+<style media="screen">
+.önizleme{background-color:#efefef; padding:10px;}
+.önizleme [data-gnl]{border:1px solid #2c2171; background-color: #4c41a1; padding:10px; color:#eee;}
+.önizleme h3 {color:#999;margin:0 0 10px 0;}
+pre.language-html{ max-height:50vh; overflow-y: auto;}
+</style>
