--- a/belgeler/yazi-bicimi.html
+++ b/belgeler/yazi-bicimi.html
@@ -7,53 +7,64 @@ title: Yazı Biçimi
 
 HTML başlık etiketleri &lt;h1&gt;'den &lt;h6&gt;'ya kadar varsayılan olarak tanımlıdır.
 
-<table>
-  <thead>
-    <tr>
-      <th>Başlık Etiketleri</th>
-      <th>Sonuçlar</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td><pre data-gnl="1 1p"><code class="language-html">&lt;h1&gt;&lt;/h1&gt;</code></pre></td>
-      <td><h1>h1 Html Etiketi İle Yazılan Metin</h1></td>
-    </tr>
-    <tr>
-      <td><pre data-gnl="1 1p"><code class="language-html">&lt;h2&gt;&lt;/h2&gt;</code></pre></td>
-      <td><h2>h2 Html Etiketi İle Yazılan Metin</h2></td>
-    </tr>
-    <tr>
-      <td><pre data-gnl="1 1p"><code class="language-html">&lt;h3&gt;&lt;/h3&gt;</code></pre></td>
-      <td><h3>h3 Html Etiketi İle Yazılan Metin</h3></td>
-    </tr>
-    <tr>
-      <td><pre data-gnl="1 1p"><code class="language-html">&lt;h4&gt;&lt;/h4&gt;</code></pre></td>
-      <td><h4>h4 Html Etiketi İle Yazılan Metin</h4></td>
-    </tr>
-    <tr>
-      <td><pre data-gnl="1 1p"><code class="language-html">&lt;h5&gt;&lt;/h5&gt;</code></pre></td>
-      <td><h5>h5 Html Etiketi İle Yazılan Metin</h5></td>
-    </tr>
-    <tr>
-      <td><pre data-gnl="1 1p"><code class="language-html">&lt;h6&gt;&lt;/h6&gt;</code></pre></td>
-      <td><h6>h6 Html Etiketi İle Yazılan Metin</h6></td>
-    </tr>
-  </tbody>
-</table>
-
 <div data-gnl="1 1p" class="önizleme">
   <h3>Önizleme</h3>
   <div data-gnl="2 2p">
     <h1>h1 Html Etiketi İle Yazılan Metin</h1>
   </div>
 </div>
+<pre data-gnl="1 1p"><code class="language-html">&lt;h1&gt;&lt;/h1&gt;</code></pre>
+<p></p>
+
+<div data-gnl="1 1p" class="önizleme">
+  <h3>Önizleme</h3>
+  <div data-gnl="2 2p">
+    <h2>h2 Html Etiketi İle Yazılan Metin</h2>
+  </div>
+</div>
 <pre data-gnl="1 1p"><code class="language-html">&lt;h2&gt;&lt;/h2&gt;</code></pre>
 <p></p>
 
+<div data-gnl="1 1p" class="önizleme">
+  <h3>Önizleme</h3>
+  <div data-gnl="2 2p">
+    <h1>h3 Html Etiketi İle Yazılan Metin</h1>
+  </div>
+</div>
+<pre data-gnl="1 1p"><code class="language-html">&lt;h3&gt;&lt;/h3&gt;</code></pre>
+<p></p>
+
+<div data-gnl="1 1p" class="önizleme">
+  <h3>Önizleme</h3>
+  <div data-gnl="2 2p">
+    <h1>h4 Html Etiketi İle Yazılan Metin</h1>
+  </div>
+</div>
+<pre data-gnl="1 1p"><code class="language-html">&lt;h4&gt;&lt;/h4&gt;</code></pre>
+<p></p>
+
+<div data-gnl="1 1p" class="önizleme">
+  <h3>Önizleme</h3>
+  <div data-gnl="2 2p">
+    <h1>h5 Html Etiketi İle Yazılan Metin</h1>
+  </div>
+</div>
+<pre data-gnl="1 1p"><code class="language-html">&lt;h5&gt;&lt;/h5&gt;</code></pre>
+<p></p>
+
+<div data-gnl="1 1p" class="önizleme">
+  <h3>Önizleme</h3>
+  <div data-gnl="2 2p">
+    <h1>h6 Html Etiketi İle Yazılan Metin</h1>
+  </div>
+</div>
+<pre data-gnl="1 1p"><code class="language-html">&lt;h6&gt;&lt;/h6&gt;</code></pre>
+<p></p>
+
+
 <style media="screen">
 .önizleme{background-color:#efefef; padding:10px;}
-.önizleme [data-gnl]{border:1px solid #2c2171; background-color: #4c41a1; padding:10px; color:#eee;}
+.önizleme [data-gnl]{border:1px solid #2c2171; background-color: #fff; padding:10px; color:#eee;}
 .önizleme h3 {color:#999;margin:0 0 10px 0;}
 pre.language-html{ max-height:50vh; overflow-y: auto;}
 </style>
