--- a/belgeler/yazi-bicimi.html
+++ b/belgeler/yazi-bicimi.html
@@ -64,7 +64,7 @@ HTML başlık etiketleri &lt;h1&gt;'den &lt;h6&gt;'ya kadar varsayılan olarak t
 
 <style media="screen">
 .önizleme{background-color:#efefef; padding:10px;}
-.önizleme [data-gnl]{border:1px solid #2c2171; background-color: #fff; padding:10px; color:#eee;}
+.önizleme [data-gnl]{border:1px solid rgba(0,0,0,.1); background-color: #fff; padding:10px; color:#eee;}
 .önizleme > h3 {color:#999;margin:0 0 10px 0;}
 pre.language-html{ max-height:50vh; overflow-y: auto;}
 </style>
