--- a/belgeler/yazi-bicimi.html
+++ b/belgeler/yazi-bicimi.html
@@ -13,7 +13,7 @@ HTML başlık etiketleri &lt;h1&gt;'den &lt;h6&gt;'ya kadar varsayılan olarak t
     <h1>h1 Html Etiketi İle Yazılan Metin</h1>
   </div>
 </div>
-<pre data-gnl="1 1p"><code class="language-html">&lt;h1&gt;&lt;/h1&gt;</code></pre>
+<pre data-gnl="1 1p"><code class="language-html">&lt;h1&gt;h1 Html Etiketi İle Yazılan Metin&lt;/h1&gt;</code></pre>
 <p></p>
 
 <div data-gnl="1 1p" class="önizleme">
@@ -22,7 +22,7 @@ HTML başlık etiketleri &lt;h1&gt;'den &lt;h6&gt;'ya kadar varsayılan olarak t
     <h2>h2 Html Etiketi İle Yazılan Metin</h2>
   </div>
 </div>
-<pre data-gnl="1 1p"><code class="language-html">&lt;h2&gt;&lt;/h2&gt;</code></pre>
+<pre data-gnl="1 1p"><code class="language-html">&lt;h2&gt;h2 Html Etiketi İle Yazılan Metin&lt;/h2&gt;</code></pre>
 <p></p>
 
 <div data-gnl="1 1p" class="önizleme">
@@ -31,7 +31,7 @@ HTML başlık etiketleri &lt;h1&gt;'den &lt;h6&gt;'ya kadar varsayılan olarak t
     <h3>h3 Html Etiketi İle Yazılan Metin</h3>
   </div>
 </div>
-<pre data-gnl="1 1p"><code class="language-html">&lt;h3&gt;&lt;/h3&gt;</code></pre>
+<pre data-gnl="1 1p"><code class="language-html">&lt;h3&gt;h3 Html Etiketi İle Yazılan Metin&lt;/h3&gt;</code></pre>
 <p></p>
 
 <div data-gnl="1 1p" class="önizleme">
@@ -40,7 +40,7 @@ HTML başlık etiketleri &lt;h1&gt;'den &lt;h6&gt;'ya kadar varsayılan olarak t
     <h4>h4 Html Etiketi İle Yazılan Metin</h4>
   </div>
 </div>
-<pre data-gnl="1 1p"><code class="language-html">&lt;h4&gt;&lt;/h4&gt;</code></pre>
+<pre data-gnl="1 1p"><code class="language-html">&lt;h4&gt;h4 Html Etiketi İle Yazılan Metin&lt;/h4&gt;</code></pre>
 <p></p>
 
 <div data-gnl="1 1p" class="önizleme">
@@ -49,7 +49,7 @@ HTML başlık etiketleri &lt;h1&gt;'den &lt;h6&gt;'ya kadar varsayılan olarak t
     <h5>h5 Html Etiketi İle Yazılan Metin</h5>
   </div>
 </div>
-<pre data-gnl="1 1p"><code class="language-html">&lt;h5&gt;&lt;/h5&gt;</code></pre>
+<pre data-gnl="1 1p"><code class="language-html">&lt;h5&gt;h5 Html Etiketi İle Yazılan Metin&lt;/h5&gt;</code></pre>
 <p></p>
 
 <div data-gnl="1 1p" class="önizleme">
@@ -58,7 +58,7 @@ HTML başlık etiketleri &lt;h1&gt;'den &lt;h6&gt;'ya kadar varsayılan olarak t
     <h6>h6 Html Etiketi İle Yazılan Metin</h6>
   </div>
 </div>
-<pre data-gnl="1 1p"><code class="language-html">&lt;h6&gt;&lt;/h6&gt;</code></pre>
+<pre data-gnl="1 1p"><code class="language-html">&lt;h6&gt;h6 Html Etiketi İle Yazılan Metin&lt;/h6&gt;</code></pre>
 <p></p>
 
 
