--- a/belgeler/sekme-orgusu.html
+++ b/belgeler/sekme-orgusu.html
@@ -2,30 +2,41 @@
 layout: default
 title: Sekme Örgüsü
 ---
+Deveb, sekme örgüsünü saf CSS yöntemiyle oluşturmaktadır. HTML yapısı ve kullanımı çok basittir. Sekmeleri yatay düzende, dikey düzende kullanabilirsiniz. Ufak bir değiştirge ekleyerek sekmelerin
+konumlarına ve durumlarına müdahale edebilirsiniz.
+
+<h2>data-sekme ve Değiştirgeleri</h2>
+Sekmeler yatay düzende ve dikey düzende kullanabilmek için iki farklı html düzeni bulunur.
+Değiştirgeleri ise şöyledir; sağda, ortada, altta, gergin, yan. <br>Not: "yan" değiştirgesi yan sekme
+için hazırlanan html düzeninde kullanılır.
+
+<hr>
+<h2>Sekme Örnekleri</h2>
+<h3>Varsayılan Sekme</h3>
 <!--  yeni sekme örgüsü -->
 <div data-sekme data-gnl="1 1p">
   <input id="im1" type="radio" name="sekme" checked="checked">
   <label for="im1">Birinci</label>
   <div>
-    Birinci sekme içeriği
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
   </div>
 
   <input id="im2" type="radio" name="sekme">
   <label for="im2">İkinci</label>
   <div>
-    İkinci sekme içeriği
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   </div>
 
   <input id="im3" type="radio" name="sekme">
   <label for="im3">Üçüncü</label>
   <div>
-    Üçüncü sekme içeriği
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ante metus dictum at tempor commodo ullamcorper a lacus vestibulum.
   </div>
 
   <input id="im4" type="radio" name="sekme">
   <label for="im4">Dördüncü</label>
   <div>
-    Dördüncü sekme içeriği
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra tellus in hac habitasse platea dictumst. Sit amet aliquam id diam maecenas ultricies mi eget. Libero nunc consequat interdum varius.
   </div>
 </div>
 
