--- a/belgeler/sekme-orgusu.html
+++ b/belgeler/sekme-orgusu.html
@@ -12,13 +12,37 @@ için hazırlanan html düzeninde kullanılır.
 
 <hr>
 <h2>Sekme Örnekleri</h2>
-<h3>Varsayılan Sekme</h3>
+
 <!--  yeni sekme örgüsü -->
 <div data-sekme data-gnl="1 1p">
   <input id="im1" type="radio" name="sekme" checked="checked">
-  <label for="im1">Birinci</label>
+  <label for="im1">Sağda</label>
   <div>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    <div data-sekme="sağda" data-gnl="1 1p">
+      <input id="im11" type="radio" name="sekme1" checked="checked">
+      <label for="im11">Birinci</label>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+
+      <input id="im21" type="radio" name="sekme1">
+      <label for="im21">İkinci</label>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      </div>
+
+      <input id="im31" type="radio" name="sekme1">
+      <label for="im31">Üçüncü</label>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ante metus dictum at tempor commodo ullamcorper a lacus vestibulum.
+      </div>
+
+      <input id="im41" type="radio" name="sekme1">
+      <label for="im41">Dördüncü</label>
+      <div>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Viverra tellus in hac habitasse platea dictumst. Sit amet aliquam id diam maecenas ultricies mi eget. Libero nunc consequat interdum varius.
+      </div>
+    </div>
   </div>
 
   <input id="im2" type="radio" name="sekme">
@@ -40,8 +64,6 @@ için hazırlanan html düzeninde kullanılır.
   </div>
 </div>
 
-<p></p>
-<p></p>
 
 <div data-sekme="sağda" data-gnl="1 1p">
   <input id="im1s" type="radio" name="sekme-sağda" checked="checked">
